--- a/src/_includes/templates/show.njk
+++ b/src/_includes/templates/show.njk
@@ -1,4 +1,5 @@
 {% extends "base.njk" %}
+{% set currentShow = show %}
 {% block title %}
   {% if show.bands and show.bands.length %}
     {{ show.bands | join(', ') }} - 
@@ -330,19 +331,10 @@
    </table>
 </div>
 <script src="{{ '/scripts/hammer.min.js' | url }}"></script>
-<!-- Modal for image preview -->
-<div id="imageModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; z-index:1000; align-items:center; justify-content:center;">
-   <div class="modal-inner">
-      <img id="modalClose" class="close-btn" src="{{ '/assets/images/icon_close.png' | url }}" alt="Close" onclick="closeModal()" />
-      <img id="modalPrev" class="nav-arrow" src="{{ '/assets/images/icon_prev.png' | url }}" alt="Previous" onclick="prevImage()" />
-      <img id="modalNext" class="nav-arrow" src="{{ '/assets/images/icon_next.png' | url }}" alt="Next" onclick="nextImage()" />
-      <!-- Image frame -->
-      <img id="modalImage" style="width:100%; height:100%; border:none; border-radius:0px;"></img>
-      <!-- Swipe overlay -->
-      <div id="gestureOverlay" style="position:absolute; top:0; left:0; width:100%; height:100%; z-index:10;"></div>
-      <div id="imageCounter" style="position: absolute; top: 14px; left: 20px; font-size: 13px; background-color: rgba(0, 0, 0, 0.5); color: #fff; padding: 3px 8px; border-radius: 6px; z-index: 30; font-family: sans-serif;"></div>
-   </div>
-</div>
+{% include "modals/cart-modal.njk" %}
+{% include "modals/image-modal.njk" %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="{{ '/scripts/cart.js' | url }}"></script>
 <script src="{{ '/scripts/notes-credts-expand.js' | url }}"></script>
 <script src="{{ '/scripts/image-modal-viewer.js' | url }}"></script>
 <script src="{{ '/scripts/setlist-toggle.js' | url }}"></script>
