--- a/styles/show.css
+++ b/styles/show.css
@@ -365,3 +365,10 @@ img.clickable-thumb {
     display: none !important;
   }
 }
+
+.add-to-cart {
+    padding: 0.25rem 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+}
