trade request e2e, extras

--- a/src/_includes/modals/cart-modal.njk
+++ b/src/_includes/modals/cart-modal.njk
@@ -38,7 +38,7 @@
             <input type="email" class="form-control" id="email" name="email" required>
           </div>
           <div class="mb-3">
-            <label for="website" class="form-label">Your Website</label>
+            <label for="website" class="form-label">Your Website <span class="text-danger">*</span></label>
             <input type="url" class="form-control" id="website" name="website">
           </div>
           <div class="mb-3">
