--- a/src/updates.njk
+++ b/src/updates.njk
@@ -147,8 +147,8 @@
    <script src="{{ '/scripts/hammer.min.js' | url }}"></script>
    {% include "modals/cart-modal.njk" %}
    {% include "modals/image-modal.njk" %}
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
    <script src="{{ '/scripts/cart.js' | url }}"></script>
    <script src="{{ '/scripts/image-modal-viewer.js' | url }}"></script>
+   <script src="{{ '/scripts/media-extras-toggle.js' | url }}"></script>
 </div>
 {% endblock %}
