--- a/templates/shows/index.html
+++ b/templates/shows/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<base href="/">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/tradelist/styles/bootstrap.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="/tradelist/styles/global.css">
@@ -56,5 +56,6 @@
   <footer style="padding: 2rem; text-align: center; font-size: 0.75rem; color: #888;">
    Vortex © 2025
   </footer>
+<script src="/tradelist/scripts/bootstrap.bundle.min.js"></script>
 </body>
 </html>
