--- a/public/templates/shows/index.html
+++ b/public/templates/shows/index.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<base href="/">
-    <link href="/tradelist/styles/bootstrap.min.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="/tradelist/styles/global.css">
-	<link rel="stylesheet" href="/tradelist/styles/show.css">
-    <meta charset="UTF-8">
-    <title>
+   <head>
+      <base href="/">
+      <link href="/tradelist/styles/bootstrap.min.css" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+      <link rel="icon" href="/favicon.ico" type="image/x-icon">
+      <link rel="stylesheet" href="/tradelist/styles/global.css">
+      <link rel="stylesheet" href="/tradelist/styles/show.css">
+      <meta charset="UTF-8">
+      <title>
   
     Unknown Show
   
 </title>
-</head>
-<body>
-<header class="navbar custom-navbar">
-  <div class="navbar-left">
-    <span class="site-title">Vortex Trade List</span>
-  </div>
-
-  <div class="navbar-center">
-	<nav id="main-nav" class="nav nav-pills justify-content-center">
-	<a class="nav-link" href="/tradelist/">Home</a>
-	<a class="nav-link" href="/tradelist/shows/">Browse Shows</a>
-	<a class="nav-link" href="/tradelist/updates/">Updates</a>
-	</nav>
-  </div>
-
-  <div class="navbar-right">
-    
-    <button class="btn btn-sm btn-cart" data-bs-toggle="modal" data-bs-target="#cartModal">🛒 Cart</button>
-  </div>
-</header>
-  <main>
-    
+	  
+      <link rel="icon" href="/favicon.ico" sizes="any">
+      <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+   </head>
+   <body>
+      <header class="navbar custom-navbar">
+         <div class="navbar-left">
+            <span class="site-title">Vortex Trade List</span>
+         </div>
+         <div class="navbar-center">
+            <nav id="main-nav" class="nav nav-pills justify-content-center">
+               <a class="nav-link" href="/tradelist/">Home</a>
+               <a class="nav-link" href="/tradelist/shows/">Browse Shows</a>
+               <a class="nav-link" href="/tradelist/va/">Various Artists</a>
+               <a class="nav-link" href="/tradelist/updates/">Updates</a>
+            </nav>
+         </div>
+         <div class="navbar-right">
+            
+            <button class="btn btn-sm btn-cart" data-bs-toggle="modal" data-bs-target="#cartModal">🛒 Cart</button>
+         </div>
+      </header>
+      <main>
+         
   <h1>
     
       Unknown Band
@@ -51,11 +53,10 @@
     <p><strong>Event:</strong> —</p>
   
 
-  </main>
-
-  <footer style="padding: 2rem; text-align: center; font-size: 0.75rem; color: #888;">
-   Vortex © 2025
-  </footer>
-<script src="/tradelist/scripts/bootstrap.bundle.min.js"></script>
-</body>
+      </main>
+      <footer style="padding: 2rem; text-align: center; font-size: 0.75rem; color: #888;">
+         Vortex © 2025
+      </footer>
+      <script src="/tradelist/scripts/bootstrap.bundle.min.js"></script>
+   </body>
 </html>
