--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,48 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<base href="{{ pathPrefix or '/' }}">
-    <link href="{{ '/styles/bootstrap.min.css' | url }}" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="/tradelist/styles/global.css">
-	<link rel="stylesheet" href="/tradelist/styles/show.css">
-    <meta charset="UTF-8">
-    <title>{% block title %}Untitled{% endblock %}</title>
-</head>
-<body>
-<header class="navbar custom-navbar">
-  <div class="navbar-left">
-    <span class="site-title">Vortex Trade List</span>
-  </div>
-
-  <div class="navbar-center">
-	<nav id="main-nav" class="nav nav-pills justify-content-center">
-	<a class="nav-link{% if page.url == '/' %} active{% endif %}" href="{{ '/' | url }}">Home</a>
-	<a class="nav-link{% if page.url == '/shows/' %} active{% endif %}" href="{{ '/shows/' | url }}">Browse Shows</a>
-	<a class="nav-link{% if page.url == '/updates/' %} active{% endif %}" href="{{ '/updates/' | url }}">Updates</a>
-	</nav>
-  </div>
-
-  <div class="navbar-right">
-    {% if currentShow %}
-    <button
-        class="btn btn-outline-success add-to-cart me-2"
-        data-id="{{ currentShow.fileSlug }}"
-        data-json="{{ currentShow | dump | urlencode }}"
-        title="Add this show to your trade cart"
-    >➕</button>
-    {% endif %}
-    <button class="btn btn-sm btn-cart" data-bs-toggle="modal" data-bs-target="#cartModal">🛒 Cart</button>
-  </div>
-</header>
-  <main>
-    {% block content %}{% endblock %}
-  </main>
-
-  <footer style="padding: 2rem; text-align: center; font-size: 0.75rem; color: #888;">
-   Vortex © 2025
-  </footer>
-<script src="{{ '/scripts/bootstrap.bundle.min.js' | url }}"></script>
-</body>
+   <head>
+      <base href="{{ pathPrefix or '/' }}">
+      <link href="{{ '/styles/bootstrap.min.css' | url }}" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+      <link rel="icon" href="/favicon.ico" type="image/x-icon">
+      <link rel="stylesheet" href="/tradelist/styles/global.css">
+      <link rel="stylesheet" href="/tradelist/styles/show.css">
+      <meta charset="UTF-8">
+      <title>{% block title %}Vortex Trade List{% endblock %}</title>
+	  {# Favicons #}
+      <link rel="icon" href="/favicon.ico" sizes="any">
+      <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+   </head>
+   <body>
+      <header class="navbar custom-navbar">
+         <div class="navbar-left">
+            <span class="site-title">Vortex Trade List</span>
+         </div>
+         <div class="navbar-center">
+            <nav id="main-nav" class="nav nav-pills justify-content-center">
+               <a class="nav-link{% if page.url == '/' %} active{% endif %}" href="{{ '/' | url }}">Home</a>
+               <a class="nav-link{% if page.url == '/shows/' %} active{% endif %}" href="{{ '/shows/' | url }}">Browse Shows</a>
+               <a class="nav-link{% if page.url == '/va/' %} active{% endif %}" href="{{ '/va/' | url }}">Various Artists</a>
+               <a class="nav-link{% if page.url == '/updates/' %} active{% endif %}" href="{{ '/updates/' | url }}">Updates</a>
+            </nav>
+         </div>
+         <div class="navbar-right">
+            {% if currentShow %}
+            <button
+               class="btn btn-outline-success add-to-cart me-2"
+               data-id="{{ currentShow.fileSlug }}"
+               data-json="{{ currentShow | dump | urlencode }}"
+               title="Add this show to your trade cart"
+               >➕</button>
+            {% endif %}
+            <button class="btn btn-sm btn-cart" data-bs-toggle="modal" data-bs-target="#cartModal">🛒 Cart</button>
+         </div>
+      </header>
+      <main>
+         {% block content %}{% endblock %}
+      </main>
+      <footer style="padding: 2rem; text-align: center; font-size: 0.75rem; color: #888;">
+         Vortex © 2025
+      </footer>
+      <script src="{{ '/scripts/bootstrap.bundle.min.js' | url }}"></script>
+   </body>
 </html>
