--- a/src/templates/show-page.njk
+++ b/src/templates/show-page.njk
@@ -1,6 +1,6 @@
 ---
 pagination:
-  data: allShowData.publicShows  # <--- Change this line
+  data: allShowData.publicRegularShows
   size: 1
   alias: show
 permalink: "/shows/{{ show.fileSlug }}/"
