--- a/src/va/index.njk
+++ b/src/va/index.njk
@@ -8,7 +8,7 @@ permalink: "/va/"
    <div id="letter-bar" class="letter-bar"></div>
    <div id="band-pills" class="d-flex flex-wrap gap-2 justify-content-center my-2" style="display:none;"></div>
 </div>
-<p id="show-count" class="show-counter">🎫 Shows: <span id="show-count-number">{{ allShowData.variousArtistShows | length }}</span></p>
+<p id="show-count" class="show-counter">🎫 Shows: <span id="show-count-number">{{ allShowData.publicVaShows | length }}</span></p>
 <table id="shows-table">
    <thead>
       <tr>
