--- a/src/_includes/templates/va-show.njk
+++ b/src/_includes/templates/va-show.njk
@@ -69,7 +69,7 @@
    <table>
       <thead>
          <tr>
-            <th>Artist</th>
+            <th>Artists</th>
             <th>Start Date</th>
             <th>End Date</th>
             <th>City</th>
